--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1"
