--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "uuid": "^11.0.3"
   }
 }
